# agentic-decision-ledger

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: _forbidden_touch.yml  decision-admissibility.yml
adl/: cli.py
adl/artifacts/: decision_record.py  snapshot.py
adl/engine/: debt.py  diff_inspector.py  evaluator.py  types.py
adl/schema/: decision_contract.schema.json
adl/utils/: io.py
artifacts/audit/: audit_trail.ndjson
artifacts/steward/: boundary_pressure_report.json  contract_drift_report.template.json  decision_debt_report.template.json  evidence_refs.json  stewardship_summary.md
decisions/contracts/: DC-2026-001.yaml  DC-INSTALL-DEMO-001.yaml  DC-REPO-001.yaml
docs/: admissibility_vs_logs.md  audit_failure_taxonomy.md  contracts_postures.md  decision_contract.md  decision_steward_role.md  demo_note.md  failure_modes_in_production.md  runbook_linux.md  runbook_windows.md  v0.2_steward_visibility.md
docs/artifacts/: contract_drift_report.example.json  decision_debt_report.example.json
examples/failure_mode/: decision_contract.yaml  run_demo.cmd
examples/happy_path/: decision_contract.yaml  run_demo.cmd
integrations/github-action/: action.yml  route_contract.py
scripts/: demo_all.cmd
tests/: test_debt.py  test_schema.py
